css/main.css
/* CSS stylesheet for Google Homepage project */

body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
    color: #222;
    background: #fff;
}
a:link{
    text-decoration: none;
    color: rgb(34, 34, 34);
}
a:hover{
    text-decoration: underline;
}
a:visited{
    text-decoration: none;
    color: inherit;
}
#body-container{
    display: flex;
    flex-direction: column;
}
#header-container{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: 6px;
    height: 60px;
}
.header-left-link{
    padding: 5px;
    margin: 0px 15px 5px 0px;
    color: rgb(34, 34, 34);
}
#header-sub-container{
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 48px;
    min-width: 0px;
}
#header-spacer{
    flex: 1;
    flex-grow: 10;
    min-width: 100px;
}
#header-nav-container{
    flex: 2;
    display: flex;
    flex-direction: row;
    align-items: center;
}
#header-links-container{
    flex: 1;
    display: flex;
    flex-direction: row;
    align-items: center;
}
.header-link{
    padding: 5px;
    margin: 5px 15px 5px 0px;
    color: rgb(34, 34, 34);
    font-size: 13px;
    vertical-align: middle;
}
#header-button-container{
    flex: 2;
    display: flex;
    flex-direction: row;
    align-items: center;
}
#tripdots{
    padding: 5px;
    margin: 5px 15px 5px 0px;
    color: #5f6368;
    fill: currentColor;
}
a#tripdots:hover{
    border-radius: 50%;
    background-color: rgba(60, 64, 67,0.08);
}
#sign-in{
    padding: 9px 23px 9px 23px;
    margin-left: 8px;
    margin-right: 8px;
    border: 0px;
    border-radius: 4px;
    border-color: rgba(0, 0, 0, 0);
    box-sizing: border-box;
    min-width: 96px;
    background: rgb(26, 115, 233);
    color: #fff;
    font-weight: 500;
    text-align: center;
}
a#sign-in:hover{
    text-decoration: none;
    background: #2b7de9;
    box-shadow: 0 1px 2px 0 rgba(66, 133, 244, 0.3), 0 1px 3px 1px rgba(66, 133, 244, 0.15);
}
#logo-container{
    display: flex;
    align-items: center;
    flex-direction: column;
    flex-shrink: 0;
    height: 92px;
    max-height: 290px;
    min-height: 92px;
}
#logo-div{
    height: 92px;
    margin-top: 0px;
    max-height: 92px;
}
#logo{
    max-height: 100%;
    max-width: 100%;
    object-fit: contain;
    object-position: 50% 100%;
    width: 272px;
}
#search-container{
    display: flex;
    flex-shrink: 0;
    padding: 20px;
    max-height: 160px;
    box-sizing: border-box;
}
#bar-button-div{
    margin: 0px 161px 0px 161px;
    padding-top: 6px;
    max-width: 584px;
    position: relative;
    width: 584px;
}
#bar-container{
    display: flex;
    z-index: 3;
    margin: 0px;
    height: 44px;
    width: 582px;
    max-width: 584px;

    border-color: rgb(223, 225, 229);
    border-width: 1px;
    border-radius: 24px;
    border-style: solid;

    background-color: rgb(255, 255, 255);
}
#bar-container:hover{
    box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
    border-color: rgba(223, 225, 229, 0);
}
#bar-spacing-container{
    display: flex;
    flex-basis: 0%;
    flex-grow: 1;
    flex-shrink: 1;
    padding: 5px 8px 0px 14px;
}
#search-icon-container{
    display: flex;
    align-items: center;
    margin-top: -5px;
    padding-right: 13px;

}
#search-icon-div{
    margin: 9px 0px 9px 0px;
    line-height: 24px;
    height: 20px;
    width: 20px;
    color: #9aa0a6;
    fill: currentColor;
}
#seach-text-container{
    display: flex;
    flex-basis: 0%;
    flex-grow: 1;
    flex-shrink: 1;
    flex-wrap: wrap;
}
#search-text-div{
    border: none;
    margin: 0;
    padding: 0;
    background-color: transparent;
    flex: 100%;
}
#text-entry{
    background-color: transparent;
    border: none;
    margin: 0;
    padding: 0;
    color: rgba(0, 0, 0, 0.87);
    flex: 100%;
    outline: none;
    display: flex;
    height: 34px;
    font-size: 16px;
}
#button-container{
    height: 70px;
    padding-top: 18px;
}
.search-button{
    background-color: #f8f9fa;
    border: 1px solid #f8f9fa;
    border-radius: 4px;
    color: #202124;
    margin: 11px 4px;
    padding: 0 16px;
    line-height: 27px;
    height: 36px;
    min-width: 54px;
    text-align: center;
    font-family: inherit;
    font-size: inherit;
}
.search-button:hover{
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
    background-color: #f8f9fa;
    border: 1px solid #dadce0;
    color: #202124;
}
#footer-container{
    background: #f2f2f2;
    flex-shrink: 0;
    box-sizing: border-box;
}
#footer-location{
    padding: 15px 30px;
    border-bottom: 1px solid #dadce0;
    font-size: 15px;
    color: rgba(0, 0, 0, 0.54);
}
#footer-links-container{
    justify-content: space-evenly;
    display: flex;
    flex-wrap: wrap;
    padding: 0 20px;
}
#footer-carbon{
    display: flex;
    flex-wrap: wrap;
    order: 0;
    width: 100%;
    justify-content: center;
}
.footer-links{
    color: #70757a!important;
    display: block;
    padding: 15px;
    white-space: nowrap;
    text-decoration: none;
    }
#carbon-neutral-logo{
    height: 14px;
    margin-right: 6px;
}
#carbon-neutral-text{
    color: #70757a;
    vertical-align: top;
}
#footer-links-left{
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    min-width: 30%;
    order: 1;
}
#footer-links-right{
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    min-width: 30%;
    order: 2;
}

